--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.8",
     "@mantine/core": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
@@ -25,8 +26,11 @@
     "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^6.5.1",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "next": "13.4.19",
+    "npm": "^9.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
